[tool.poetry]
name = "cloud_intelligence"
version = "0.1.0"
description = "k8s OSINT tool. Searhing for known vulnerabilities"
authors = ["Saschenko Danila <rivenfornotifications@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8"
aiohttp = "^3.8.1"
ujson = "^5.1.0"
tabulate = "^0.8.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
